server 1.2
新增user/{userId}接口
新增部分调试
新增加密调试类
新增CORS跨域资源共享配置
